2001-05-10  Marius Vollmer  <mvo@zagadka.ping.de>

	Merge from mvo-vcell-clenaup-1-branch.
	
	The concept of vcells has been removed from Guile.  With it,
	explicit obarrays and associated operations are gone.  Use
	hashtables instead of obarrays.
	
	Throughout: use scm_sym2var instead of scm_sym2vcell and treat
	result as variable instead of vcell.  Glocs no longer point to a
	vcell but to a variable.  Use scm_c_define instead of
	scm_sysintern and treat the result as a variable (which it is),
	not a vcell.
	
	* variable.c, variable.h (SCM_VARVCELL, SCM_UDVARIABLEP,
	SCM_DEFVARIABLEP): Deprecated.
	(SCM_VARIABLE_REF, SCM_VARIABLE_SET, SCM_VARIABLE_LOC): New.
	(variable_print): Do not print name of variable.
	(variable_equalp): Compare values, not vcells.
	(anonymous_variable_sym): Removed.
	(make_vcell_variable): Removed.
	(make_variable): New, as replacement.
	(scm_make_variable, scm_make_undefined_variable): Do not take name
	hint parameter.
	(scm_variable_ref): Check for SCM_UNDEFINED and throw "unbound"
	error in that case.
	(scm_builtin_variable): Deprecated.

	* symbols.c, symbols.h (scm_sym2vcell, scm_sym2ovcell_soft,
	scm_sym2ovcell, scm_intern_obarray_soft, scm_intern_obarray,
	scm_intern, scm_intern0, scm_sysintern0_no_module_lookup,
	scm_sysintern, scm_sysintern0, scm_symbol_value0,
	scm_string_to_obarray_symbol, scm_intern_symbol,
	scm_unintern_symbol, scm_symbol_binding, scm_symbol_interned,
	scm_symbol_bound_p, scm_symbol_set_x, scm_gentmp, gentmp_counter):
	Deprecated and moved to "symbols-deprecated.c".
	(copy_and_prune_obarray, scm_builtin_bindings): Removed.
	(scm_init_symbols): Call scm_init_symbols_deprecated.
	* symbols-deprecated.c: New file.
	* Makefile.am: Added symbols-deprecated.c and related files in all
	the right places.
	
	* snarf.h (SCM_VCELL, SCM_GLOBAL_VCELL, SCM_VCELL_INIT,
	SCM_GLOBAL_VCELL_INIT): Deprecated.
	(SCM_VARIABLE, SCM_GLOBAL_VARIABLE, SCM_VARIABLE_INIT,